# push_instructtion

./: CMakeLists.txt  package.xml
msg/: encoder.msg
scripts/: .startup.sh.swp  startup.sh
scripts/aft_vision/: CMakeLists.txt  package.xml
scripts/aft_vision/scripts/: DEFENSE.py  EYES_AND_LEGS.py  GOOD_DEFENSE.py  HOUGH_TRANSFORM.py  ROBOT_EYES_AND_HANDS.py  VINTAGE.py  commands.sh  flip_image.py  simple_Video_Capture.py  spaghetti_Video_Capture.py  track_ball.py  vectorFunctions.py
scripts/motorcode/: Manual_inital.py  Manual_inital_test.py  arrow_move.py  cont_move.py  enc_states.py  enc_states_test.py  motor1.py  motor2.py  motor3.py  motor4.py  testing.py
scripts/motorcode/Examples, Dont Touch/: DONOTCHANGE.py
src/: cont_rot.cpp  quicksave.txt  testing_connect.cpp
