<?xml version="1.0"?>
<package format="2">
  <name>aftcode</name>
  <version>0.0.0</version>
  <description>The aftcode package</description>

  <!-- Maintainer and License Info -->
  <maintainer email="foobot@todo.todo">foobot</maintainer>
  <license>TODO</license>

  <!-- Dependencies -->
  <build_depend>message_generation</build_depend>  <!-- Add message_generation as a build_depend -->
  <build_depend>message_runtime</build_depend>     <!-- Add message_runtime as a build_depend -->

  <exec_depend>message_runtime</exec_depend>       <!-- message_runtime is also an exec_depend -->
  
  <!-- Catkin dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Exported information -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>

